--- a/composer.json
+++ b/composer.json
@@ -8,25 +8,24 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^8.0",
-        "barryvdh/laravel-dompdf": "^0.9.0",
-        "fideloper/proxy": "^4.4",
-        "fruitcake/laravel-cors": "^2.0",
-        "guzzlehttp/guzzle": "^7.0.1",
-        "laravel/framework": "^8.12",
-        "laravel/helpers": "^1.4",
-        "laravel/tinker": "^2.5",
+        "php": "^8.1",
+        "barryvdh/laravel-dompdf": "^1.0.0",
+        "fruitcake/laravel-cors": "^3.0",
+        "guzzlehttp/guzzle": "^7.4.2",
+        "laravel/framework": "^9.1.6",
+        "laravel/helpers": "^1.5",
+        "laravel/tinker": "^2.7.2",
         "maatwebsite/excel": "^3.1",
         "simplesoftwareio/simple-qrcode": "~4",
         "tymon/jwt-auth": "^1.0"
     },
     "require-dev": {
-        "facade/ignition": "^2.5",
+        "spatie/laravel-ignition": "^1.0",
         "fakerphp/faker": "^1.9.1",
-        "laravel/sail": "^1.0.1",
-        "mockery/mockery": "^1.4.2",
-        "nunomaduro/collision": "^5.0",
-        "phpunit/phpunit": "^9.3.3",
+        "laravel/sail": "^1.14.0",
+        "mockery/mockery": "^1.5.0",
+        "nunomaduro/collision": "^6.2",
+        "phpunit/phpunit": "^9.5.20",
         "predis/predis": "^1.1"
     },
     "config": {
