--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "laravel/laravel",
+    "name": "aeduca/admin",
     "type": "project",
     "description": "Aeduca admin",
     "keywords": [
