--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "vuex": "^3.6.2"
   },
   "devDependencies": {
+    "autoprefixer": "10.4.5",
     "@babel/eslint-parser": "^7.17.0",
     "bootstrap": "^4.6.1",
     "eslint": "^8.14.0",
